--- a/single.html
+++ b/single.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <nav class="nav bg-light shadow-sm py-2">
+        <nav class="nav bg-white shadow-sm py-2">
             <div class="container">
                 <div class="row d-flex align-items-center">
                     <div class="col-md-3">
@@ -30,8 +30,8 @@
                     </div>
                     <div class="col-md-6">
                         <form class="d-flex search">
-                            <input class="form-control" type="search" placeholder="Search">
-                            <button class="btn" type="submit">Search</button>
+                            <input class="form-control form-control-lg" type="search" placeholder="Search">
+                            <button class="btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                         </form>
                     </div>
                     <div class="col-md-3">
@@ -54,9 +54,11 @@
                                     <i class="fa-solid fa-user"></i> User
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="drp">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="#"><i class="fa-solid fa-gem"></i> My Course</a></li>
+                                    <li><a class="dropdown-item" href="#"><i class="fa-solid fa-code-compare"></i> Wishlist</a></li>
+                                    <li><a class="dropdown-item" href="#"><i class="fa-solid fa-money-check-dollar"></i> Purchase History</a></li>
+                                    <li><a class="dropdown-item" href="#"><i class="fa-regular fa-user"></i></i> Profile</a></li>
+                                    <li><a class="dropdown-item" href="#"><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</a></li>
                                 </ul>
                             </div>
                         </div>
